Replace custom sorting  with sorted list for the chat user list (#2454)